[package]
name = "crowd-funding"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
fungible = { git = "https://github.com/bhaagiKenpachi/linera-fungible", rev = "e93272c" }
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
fungible = { git = "https://github.com/bhaagiKenpachi/linera-fungible", rev = "e93272c" }
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299", features = ["test", "wasmer"] }
tokio = "1.39.3"

[[bin]]
name = "crowd_funding_contract"
path = "src/contract.rs"

[[bin]]
name = "crowd_funding_service"
path = "src/service.rs"
